--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a {
 
 .main_bg {
   margin: 0 auto;
-  background-image: url("/img/bgbg2.png");
+  background-image: url("img/bgbg2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center 85%;
@@ -346,7 +346,7 @@ a {
 
 .first_red::before {
   content: "";
-  background-image: url(/img/znak.png);
+  background-image: url(img/znak.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
